Implement file endpoint

--- a/ETZ.Lending.Presentation.WebApi/ETZ.Lending.Presentation.WebApi.csproj
+++ b/ETZ.Lending.Presentation.WebApi/ETZ.Lending.Presentation.WebApi.csproj
@@ -17,4 +17,8 @@
       <ProjectReference Include="..\ETZ.Lending.Domain.IoC\ETZ.Lending.Domain.IoC.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Uploads" />
+    </ItemGroup>
+
 </Project>
